--- a/IdentityServer4Example/IdentityServer4Example.Web/ClientApp/package.json
+++ b/IdentityServer4Example/IdentityServer4Example.Web/ClientApp/package.json
@@ -27,6 +27,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "oidc-client": "^1.5.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
